# autometrics-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: Dockerfile  init.sql
db/sqlserver/: Dockerfile  entrypoint.sh  init.sql
src/autometrics_engine/: main.py
src/autometrics_engine/api/: dependencies.py
src/autometrics_engine/api/routers/: dashboard.py  etl.py  insights.py  kpis.py  reports.py
src/autometrics_engine/api/schemas/: insight.py  kpi.py  report.py
src/autometrics_engine/application/use_cases/: generate_insights.py  generate_report.py  run_etl.py
src/autometrics_engine/domain/entities/: insight.py  kpi.py  product.py  sale.py  store.py
src/autometrics_engine/domain/repositories/: insight_repository.py  kpi_repository.py  product_repository.py  report_repository.py  sale_repository.py  source_extractor.py  store_repository.py
src/autometrics_engine/domain/services/: llm_provider.py
src/autometrics_engine/infrastructure/: constants.py  settings.py
src/autometrics_engine/infrastructure/data/: base.py  postgres.py
src/autometrics_engine/infrastructure/data/repositories/: postgres_insight_repository.py  (+6 more)
src/autometrics_engine/infrastructure/services/: gemini_provider.py
src/autometrics_engine/infrastructure/worker/: functions.py  settings.py
templates/: dashboard.html
tests/: conftest.py
tests/integration/: test_api.py  test_api_error_cases.py
tests/unit/: test_api_schemas.py  test_constants.py  test_domain_entities.py  test_use_cases.py  test_use_cases_edge.py
