[project]
name = "autometrics-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Herrera",email = "114835840+kevinhc2110@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-multipart (>=0.0.30,<0.0.31)",
    "numpy (>=2.4.6,<3.0.0)",
    "google-genai (>=2.8.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",

    "anyio (>=4.10.0,<5.0.0)",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "requests (>=2.32.0,<3.0.0)",
    "pymssql>=2.3.0",
    "jinja2>=3.1.0",
]

[tool.poetry]
packages = [{include = "autometrics_engine", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.25.0,<1.0.0"
pytest-mock = ">=3.14.0,<4.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
